# NextTranslation

./: .gitignore  README.md  package-lock.json  package.json
backend/: main.py  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  errors.py  llm_debug.py  main.py  sse.py
backend/app/engines/: __init__.py  anthropic_engine.py  base.py  openai_engine.py  registry.py
backend/app/models/: __init__.py  api_keys.py  blueprint.py  translation.py
backend/app/prompts/: __init__.py  blueprint.py  spec.py  system.py  test_spec_prompt_blocks.py  vibe.py
backend/app/routers/: __init__.py  engines.py  health.py  translate.py
backend/app/services/: translation.py
backend/app/services/translation/: __init__.py  base.py  easy.py  spec.py  spec_blueprint.py  vibe.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: client.ts  specBlueprint.ts  specTranslation.ts  translation.ts
frontend/src/components/common/: ConfirmDialog.tsx  CopyButton.tsx  EmptyState.tsx  ErrorAlert.tsx  LoadingButton.tsx  WarningAlert.tsx  index.ts
frontend/src/components/layout/: AppLayout.tsx  PageHeader.tsx
frontend/src/hooks/: index.ts  useCopyToClipboard.ts  useEngineConfig.ts  useLanguageSelector.ts
frontend/src/lib/: constants.ts  query.ts
frontend/src/pages/: EasyTranslation.tsx  Settings.tsx  SpecTranslation.tsx  VibeTranslation.tsx
frontend/src/stores/: settings.ts  translation.ts
frontend/src/types/: common.ts  engine.ts  index.ts  spec.ts  translation.ts
(+19 files in other folders)
